# orthogonal-array

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/source/: conf.py
