[tool.poetry]
name = "orthogonal-array"
version = "0.1.0"
description = "Python library of orthogonal array."
authors = ["Shota Fukuda <st_fukuda@outlook.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

numpy = "*"

[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
flake8 = "*"
bandit = {extras = ["toml"], version = "*"}
pre-commit = "*"
pytest = "*"
tox = "*"
sphinx = "*"
sphinx_rtd_theme = "*"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.bandit]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
